--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0.32", features = ["derive"] }
 regex = "1"
+serde = { version = "1.0.152", features = ["derive"] }
+serde_yaml = "0.9.16"
