--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 clap = { version = "4.0.32", features = ["derive"] }
 regex = "1"
 serde = { version = "1.0.152", features = ["derive"] }
+serde_regex = "1.1.0"
 serde_yaml = "0.9.16"
