--- a/rules.yml
+++ b/rules.yml
@@ -4,7 +4,7 @@ rules:
   - id: private-ssh-key
     mode: multiline-regex
     pattern-start: "-----BEGIN .* PRIVATE KEY-----"
-    pattern-mid: "@[a-zA-Z0-9+/]+={,2}"
+    pattern-mid: "[a-zA-Z0-9+/]{16,}={0,2}"
     pattern-end: "-----END .* PRIVATE KEY-----"
   - id: github-classic-personal-access-token
     mode: regex
